# lsd-slam

./: .qglviewer.xml  .qglviewer1.xml  CMakeLists.txt  README.md  lsd-slam.kdev4  lsd_slam.kdev4
.kdev4/: lsd-slam.kdev4  lsd_slam.kdev4
lsd_slam_core/: CMakeLists.txt
lsd_slam_core/calib/: OpenCV_example_calib (copy).cfg~  OpenCV_example_calib.cfg~  mycalib.cfg
lsd_slam_core/save/: consistency.txt  distance.txt  error.txt  meanRootInformation.txt  residual.txt  residualD.txt  residualP.txt  usage.txt  usedPixels.txt
lsd_slam_core/src/: LiveSLAMWrapper.cpp  SlamSystem.cpp  main_live_odometry.cpp
lsd_slam_core/src/DepthEstimation/: DepthMap.cpp  DepthMap.h
lsd_slam_core/src/GlobalMapping/: KeyFrameGraph.h  TrackableKeyFrameSearch.cpp
lsd_slam_core/src/IOWrapper/ROS/: ROSImageStreamThread.cpp  ROSOutput3DWrapper.cpp
lsd_slam_core/src/Tracking/: LGSX.h  SE3Tracker.cpp  SE3Tracker.h  Sim3Tracker.cpp  TrackingReference.cpp
lsd_slam_core/src/util/: settings.h
lsd_slam_viewer/: CMakeLists.txt  pc.ply
lsd_slam_viewer/launch/: lsd_slam_viewer.launch
lsd_slam_viewer/src/: .KeyFrameGraphDisplay.cpp.kate-swp  .main_viewer.cpp.swp  KeyFrameDisplay.cpp  KeyFrameDisplay.h  KeyFrameGraphDisplay.cpp  KeyFrameGraphDisplay.h  PointCloudViewer.cpp  PointCloudViewer.h  main_viewer.cpp  main_viewer.h
lsd_slam_viewer/src/keyboard/: keyboard.cc  keyboard.h
lsd_slam_viewer/src/robot/: robot.cc  robot.h
lsd_slam_viewer/src/serial/: serial.cc  serial.h
