cmake_minimum_required(VERSION 3.9)
project(lsd_slam)

set(CMAKE_CXX_STANDARD 11)

add_executable(lsd_slam
        lsd_slam_core/cfg/cpp/lsd_slam_core/LSDDebugParamsConfig.h
        lsd_slam_core/cfg/cpp/lsd_slam_core/LSDParamsConfig.h
        lsd_slam_core/src/DataStructures/Frame.cpp
        lsd_slam_core/src/DataStructures/Frame.h
        lsd_slam_core/src/DataStructures/FrameMemory.cpp
        lsd_slam_core/src/DataStructures/FrameMemory.h
        lsd_slam_core/src/DataStructures/FramePoseStruct.cpp
        lsd_slam_core/src/DataStructures/FramePoseStruct.h
        lsd_slam_core/src/DepthEstimation/DepthMap.cpp
        lsd_slam_core/src/DepthEstimation/DepthMap.h
        lsd_slam_core/src/DepthEstimation/DepthMapPixelHypothesis.cpp
        lsd_slam_core/src/DepthEstimation/DepthMapPixelHypothesis.h
        lsd_slam_core/src/GlobalMapping/FabMap.cpp
        lsd_slam_core/src/GlobalMapping/FabMap.h
        lsd_slam_core/src/GlobalMapping/g2oTypeSim3Sophus.cpp
        lsd_slam_core/src/GlobalMapping/g2oTypeSim3Sophus.h
        lsd_slam_core/src/GlobalMapping/KeyFrameGraph.cpp
        lsd_slam_core/src/GlobalMapping/KeyFrameGraph.h
        lsd_slam_core/src/GlobalMapping/TrackableKeyFrameSearch.cpp
        lsd_slam_core/src/GlobalMapping/TrackableKeyFrameSearch.h
        lsd_slam_core/src/IOWrapper/OpenCV/ImageDisplay_OpenCV.cpp
        lsd_slam_core/src/IOWrapper/ROS/ROSImageStreamThread.cpp
        lsd_slam_core/src/IOWrapper/ROS/ROSImageStreamThread.h
        lsd_slam_core/src/IOWrapper/ROS/ROSOutput3DWrapper.cpp
        lsd_slam_core/src/IOWrapper/ROS/ROSOutput3DWrapper.h
        lsd_slam_core/src/IOWrapper/ROS/rosReconfigure.h
        lsd_slam_core/src/IOWrapper/ImageDisplay.h
        lsd_slam_core/src/IOWrapper/InputImageStream.h
        lsd_slam_core/src/IOWrapper/NotifyBuffer.h
        lsd_slam_core/src/IOWrapper/Output3DWrapper.h
        lsd_slam_core/src/IOWrapper/Timestamp.cpp
        lsd_slam_core/src/IOWrapper/Timestamp.h
        lsd_slam_core/src/IOWrapper/TimestampedObject.h
        lsd_slam_core/src/Tracking/LGSX.h
        lsd_slam_core/src/Tracking/Relocalizer.cpp
        lsd_slam_core/src/Tracking/Relocalizer.h
        lsd_slam_core/src/Tracking/SE3Tracker.cpp
        lsd_slam_core/src/Tracking/SE3Tracker.h
        lsd_slam_core/src/Tracking/Sim3Tracker.cpp
        lsd_slam_core/src/Tracking/Sim3Tracker.h
        lsd_slam_core/src/Tracking/TrackingReference.cpp
        lsd_slam_core/src/Tracking/TrackingReference.h
        lsd_slam_core/src/util/EigenCoreInclude.h
        lsd_slam_core/src/util/globalFuncs.cpp
        lsd_slam_core/src/util/globalFuncs.h
        lsd_slam_core/src/util/IndexThreadReduce.h
        lsd_slam_core/src/util/settings.cpp
        lsd_slam_core/src/util/settings.h
        lsd_slam_core/src/util/SophusUtil.cpp
        lsd_slam_core/src/util/SophusUtil.h
        lsd_slam_core/src/util/Undistorter.cpp
        lsd_slam_core/src/util/Undistorter.h
        lsd_slam_core/src/LiveSLAMWrapper.cpp
        lsd_slam_core/src/LiveSLAMWrapper.h
        lsd_slam_core/src/main_live_odometry.cpp
        lsd_slam_core/src/main_on_images.cpp
        lsd_slam_core/src/SlamSystem.cpp
        lsd_slam_core/src/SlamSystem.h
        lsd_slam_core/thirdparty/openFabMap/include/openfabmap.hpp
        lsd_slam_core/thirdparty/openFabMap/samples/openFABMAPcli.cpp
        lsd_slam_core/thirdparty/openFabMap/src/BOWMSCTrainer.cpp
        lsd_slam_core/thirdparty/openFabMap/src/ChowLiuTree.cpp
        lsd_slam_core/thirdparty/openFabMap/src/FabMap.cpp
        lsd_slam_core/thirdparty/Sophus/sophus/rxso3.hpp
        lsd_slam_core/thirdparty/Sophus/sophus/se2.hpp
        lsd_slam_core/thirdparty/Sophus/sophus/se3.hpp
        lsd_slam_core/thirdparty/Sophus/sophus/sim3.hpp
        lsd_slam_core/thirdparty/Sophus/sophus/so2.hpp
        lsd_slam_core/thirdparty/Sophus/sophus/so3.hpp
        lsd_slam_core/thirdparty/Sophus/sophus/sophus.hpp
        lsd_slam_core/thirdparty/Sophus/sophus/test_rxso3.cpp
        lsd_slam_core/thirdparty/Sophus/sophus/test_se2.cpp
        lsd_slam_core/thirdparty/Sophus/sophus/test_se3.cpp
        lsd_slam_core/thirdparty/Sophus/sophus/test_sim3.cpp
        lsd_slam_core/thirdparty/Sophus/sophus/test_so2.cpp
        lsd_slam_core/thirdparty/Sophus/sophus/test_so3.cpp
        lsd_slam_core/thirdparty/Sophus/sophus/tests.hpp
        lsd_slam_viewer/cfg/cpp/lsd_slam_viewer/LSDSLAMViewerParamsConfig.h
        lsd_slam_viewer/msg_gen/cpp/include/lsd_slam_viewer/keyframeGraphMsg.h
        lsd_slam_viewer/msg_gen/cpp/include/lsd_slam_viewer/keyframeMsg.h
        lsd_slam_viewer/src/KeyFrameDisplay.cpp
        lsd_slam_viewer/src/KeyFrameDisplay.h
        lsd_slam_viewer/src/KeyFrameGraphDisplay.cpp
        lsd_slam_viewer/src/KeyFrameGraphDisplay.h
        lsd_slam_viewer/src/main_stitchVideos.cpp
        lsd_slam_viewer/src/main_viewer.cpp
        lsd_slam_viewer/src/main_viewer.h
        lsd_slam_viewer/src/PointCloudViewer.cpp
        lsd_slam_viewer/src/PointCloudViewer.h
        lsd_slam_viewer/src/settings.cpp
        lsd_slam_viewer/src/settings.h
        lsd_slam_viewer/thirdparty/Sophus/sophus/rxso3.hpp
        lsd_slam_viewer/thirdparty/Sophus/sophus/se2.hpp
        lsd_slam_viewer/thirdparty/Sophus/sophus/se3.hpp
        lsd_slam_viewer/thirdparty/Sophus/sophus/sim3.hpp
        lsd_slam_viewer/thirdparty/Sophus/sophus/so2.hpp
        lsd_slam_viewer/thirdparty/Sophus/sophus/so3.hpp
        lsd_slam_viewer/thirdparty/Sophus/sophus/sophus.hpp
        lsd_slam_viewer/thirdparty/Sophus/sophus/test_rxso3.cpp
        lsd_slam_viewer/thirdparty/Sophus/sophus/test_se2.cpp
        lsd_slam_viewer/thirdparty/Sophus/sophus/test_se3.cpp
        lsd_slam_viewer/thirdparty/Sophus/sophus/test_sim3.cpp
        lsd_slam_viewer/thirdparty/Sophus/sophus/test_so2.cpp
        lsd_slam_viewer/thirdparty/Sophus/sophus/test_so3.cpp
        lsd_slam_viewer/thirdparty/Sophus/sophus/tests.hpp)
